@@ -6,6 +6,7 @@ export(filterData)
 export(getGLPGColorPalettePatientProfile)
 export(getGLPGLinetypePalettePatientProfile)
 export(getGLPGShapePalettePatientProfile)
+export(getNLinesSubjectProfile)
 export(getPathTemplate)
 export(getTimeTrans)
 export(subjectProfileCombine)
